hphp/hack/test/typecheck/nonnull/null_is_not_of_type_nonnull.php
<?hh // strict

function f(): nonnull {
  return null;
}
